# aruco_mapping

./: CMakeLists.txt  README.md  package.xml
data/: ost.ini  raspicam_v1_underwater.ini  raspicam_v1_underwater.yaml  virtual_camera.ini  webcam.ini
include/aruco_mapping/: aruco_mapping.h  aruco_mapping_fixed.h
launch/: .aruco_mapping.launch.swp  aruco_config.rviz  aruco_mapping.launch  aruco_mapping_irsrov.launch  aruco_mapping_static.launch
src/: aruco_mapping.cpp  aruco_mapping_fixed.cpp  aruco_mapping_fixed_main.cpp  aruco_mapping_main.cpp  aruco_mapping_static.cpp  aruco_mapping_static_main.cpp  main.cpp
